// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test settings reducer should display class graph 1`] = `
Object {
  "chartTitle": "The Class",
  "chartToDisplay": "class",
  "classroom": "The Class",
  "classroomDropdown": true,
  "examId": null,
  "examName": null,
  "openExamList": false,
  "openSubList": false,
  "subjectId": null,
  "subjectName": null,
}
`;

exports[`test settings reducer should display exam graph 1`] = `
Object {
  "chartTitle": "Math Exam 1",
  "chartToDisplay": "exam",
  "classroom": null,
  "classroomDropdown": false,
  "examId": "09jKxOrd32Ry2MHV",
  "examName": "Math Exam 1",
  "openExamList": true,
  "openSubList": false,
  "subjectId": null,
  "subjectName": null,
}
`;

exports[`test settings reducer should display subject graph 1`] = `
Object {
  "chartTitle": "Mathematics",
  "chartToDisplay": "subject",
  "classroom": null,
  "classroomDropdown": false,
  "examId": null,
  "examName": null,
  "openExamList": false,
  "openSubList": true,
  "subjectId": "pokNxOkl32Ry2JHN",
  "subjectName": "Mathematics",
}
`;

exports[`test settings reducer should get all exams 1`] = `
Object {
  "chartTitle": null,
  "chartToDisplay": null,
  "classroom": null,
  "classroomDropdown": false,
  "examId": null,
  "examName": null,
  "exams": Array [
    Object {
      "_id": "YXhj48EuUipWj9wW",
      "createdAt": Object {
        "$$date": 1554742311396,
      },
      "date": "2019-01-10",
      "subjectId": "pokNxOkl32Ry2JHN",
      "title": "Exam 1",
      "updatedAt": Object {
        "$$date": 1554742311396,
      },
      "weight": "1",
    },
    Object {
      "_id": "hbcaDllgG2wFLT1Z",
      "createdAt": Object {
        "$$date": 1554442379899,
      },
      "date": "2019-01-10",
      "subjectId": "pokNxOkl32Ry2JHN",
      "title": "Exam 2",
      "updatedAt": Object {
        "$$date": 1544742379899,
      },
      "weight": "1",
    },
  ],
  "openExamList": false,
  "openSubList": false,
  "subjectId": null,
  "subjectName": null,
}
`;

exports[`test settings reducer should get all grades 1`] = `
Object {
  "chartTitle": null,
  "chartToDisplay": null,
  "classroom": null,
  "classroomDropdown": false,
  "examId": null,
  "examName": null,
  "openExamList": false,
  "openSubList": false,
  "subjectId": null,
  "subjectName": null,
}
`;

exports[`test settings reducer should use default graph state 1`] = `
Object {
  "chartTitle": null,
  "chartToDisplay": null,
  "classroom": null,
  "classroomDropdown": false,
  "examId": null,
  "examName": null,
  "openExamList": false,
  "openSubList": false,
  "subjectId": null,
  "subjectName": null,
}
`;
